# src/api/controllers/accomodation/accomodationController.js
@@ -10,3 +10,25 @@ exports.getAllAccommodations = (req, res, db) => {
     res.json(results);
   });
 };
+
+exports.likeAccommodation = (req, res, db) => {
+  const accommodationId = req.params.id;
+  const userId = req.body.id_user;
+
+  if (!userId) {
+    return res.status(400).send('User ID is required');
+  }
+
+  const query = `
+    INSERT INTO likes (id_accommodation, id_user)
+    VALUES (?, ?)
+  `;
+
+  db.query(query, [accommodationId, userId], (error, results) => {
+    if (error) {
+      console.error('Erreur lors de l\'ajout du like:', error);
+      return res.status(500).send('Erreur lors de l\'ajout du like.');
+    }
+    res.status(201).send('Like ajouté avec succès');
+  });
+};
