# src/api/routes/accomodation/accomodationRoutes.js
@@ -1,13 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const multer = require('multer');
-const accommodationController = require('../../controllers/accommodations/accommodationController');
+const accommodationController = require('../../controllers/accomodation/accomodationController');
 
-const upload = multer({ dest: 'uploads/' });
 
 module.exports = (db) => {
-  router.get('/accommodations', (req, res) => accommodationController.getAllAccommodations(req, res, db));
-  router.post('/accommodations/:id/image', upload.single('image'), (req, res) => accommodationController.uploadAccommodationImage(req, res, db));
+  router.get('/', (req, res) => accommodationController.getAllAccommodations(req, res, db));
+  router.post('/:id/like', (req, res) => accommodationController.likeAccommodation(req, res, db));
 
   return router;
 };
