# src/api/routes/routes.js
@@ -4,12 +4,11 @@ const router = express.Router();
 module.exports = (db) => {
   const userRoutes = require('./users/userRoutes')(db);
   const authRoutes = require('./auth/authRoutes')(db);
-  const accommodationController = require('../controllers/accomodation/accomodationController');
+  const accommodationRoutes = require('./accomodation/accomodationRoutes')(db); 
 
   router.use('/users', userRoutes);
   router.use('/auth', authRoutes);
-
-  router.get('/accommodations', (req, res) => accommodationController.getAllAccommodations(req, res, db));
+  router.use('/accommodations', accommodationRoutes);
 
   return router;
 };
